--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p style="text-align:center">
 
         <img style="max-width: 900px;
-        height: 800px;" src="../img/IMG_5164.jpg" alt="Beautiful Lady">
+        height: 800px;" src="./img/IMG_5164.jpg" alt="Beautiful Lady">
     <h3 style="text-align: center;">A collection of recipes from Chef Sandra</h3>
     </p>
     <ol>
