add file via upload
add html, css and image for odin project

--- a/index.html
+++ b/index.html
@@ -2,26 +2,91 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My odin recipe</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Andraberry</title>
 </head>
 
 <body>
-    <h1 class="top">Recipes by Chef Sandra</h1>
-    <p style="text-align:center">
+  <div class="hero-section">
+    <div class="hero-container">
+      <header class="header">
+        <div class="logo">
+          <img src="../odin-project/img/my logo.png" alt="Andraberry's logo">
+          <p>ANDRA<span>BERRY</span></p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="down-hero">
+        <div class="left-side">
+          <h1>Made for you.
+            <br>Regain your confidence
+          </h1>
+          <p>Upgrade to a modern sneakers</p>
+          <button>Sign Up</button>
+        </div>
+        <div class="right-side">
+          <img src="../odin-project/img/IMG_6321.JPG" alt="Many shoes">
+        </div>
+      </div>
+    </div>
+  </div>
+  <section class="section1">
+    <h2>Some random information.</h2>
+    <div class="infor">
+      <figure>
+        <div class="img">
+          <img src="../odin-project/img/red shoe.jpg" alt="">
+        </div>
+        <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusantium?</figcaption>
+      </figure>
+      <figure>
+        <div class="img">
+          <img src="../odin-project/img/shoe1.jpg" alt="">
+        </div>
+        <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusantium?</figcaption>
+      </figure>
+      <figure>
+        <div class="img">
+          <img src="../odin-project/img/shoe2.jpg" alt="">
+        </div>
+        <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusantium?</figcaption>
+      </figure>
+      <figure>
+        <div class="img">
+          <img src="../odin-project/img/shoe3.jpg" alt="">
+        </div>
+        <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusantium?</figcaption>
+      </figure>
+    </div>
+  </section>
+  <section class="text-container">
+    <div class="text">
 
-        <img style="max-width: 900px;
-        height: 800px;" src="./img/IMG_5164.jpg" alt="Beautiful Lady">
-    <h3 style="text-align: center;">A collection of recipes from Chef Sandra</h3>
-    </p>
-    <ol>
-        <li><a href="./recipes/jollofrice.html">Jollof rice recipe</a></li>
-        <li><a href="">Fried rice recipe</a></li>
-        <li><a href="">Yam porridge recipe</a></li>
-    </ol>
-    <a href="#top">Return to top</a>
+      <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium vero repellendus, sunt nostrum sit
+          nobis
+          officiis illo provident inventore beatae.</em> </p>
+      <p class="cite">-Nnabugwu Sandra</p>
+    </div>
+  </section>
+  <section class="signup-container">
+    <div class="signup">
+      <div class="right">
+        <p>You cannot afford to miss these amazing rates on our products</p>
+        <p>Click the link to order now</p>
+      </div>
+      <button>Shop Now</button>
+    </div>
+  </section>
+  <footer>Copyright &copy; Andraberry 2022</footer>
 </body>
 
 </html>
