edit to show logo and hero img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="hero-container">
       <header class="header">
         <div class="logo">
-          <img src="../odin-project/img/my logo.png" alt="Andraberry's logo">
+          <img src="my logo.png" alt="Andraberry's logo">
           <p>ANDRA<span>BERRY</span></p>
         </div>
         <nav>
@@ -34,7 +34,7 @@
           <button>Sign Up</button>
         </div>
         <div class="right-side">
-          <img src="../odin-project/img/IMG_6321.JPG" alt="Many shoes">
+          <img src="IMG_6321.JPG" alt="Many shoes">
         </div>
       </div>
     </div>
